--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp"
     tools:context=".LoginFragment">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/btnBackToLoginFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="@color/putih"
         android:src="@drawable/ic_baseline_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +22,7 @@
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Daftar"
         android:textColor="@color/hitam"
@@ -50,29 +51,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Nama"
         android:textColor="@color/hitam"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_subtitle"
+        app:layout_constraintStart_toStartOf="@id/tv_subtitle"
         app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:fontFamily="@font/montserrat_medium"
         android:hint="Nama Lengkap"
         android:inputType="textPersonName"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_name"
+        app:layout_constraintStart_toStartOf="@id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <TextView
@@ -86,24 +85,22 @@
         android:text="Tanggal Lahir"
         android:textColor="@color/hitam"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/et_name"
+        app:layout_constraintStart_toStartOf="@id/et_name"
         app:layout_constraintTop_toBottomOf="@id/et_name" />
 
     <EditText
         android:id="@+id/et_birth_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:ems="10"
         android:fontFamily="@font/montserrat_medium"
         android:hint="ini placeholder"
         android:inputType="date"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_tl"
+        app:layout_constraintStart_toStartOf="@id/tv_tl"
         app:layout_constraintTop_toBottomOf="@+id/tv_tl" />
 
     <TextView
@@ -117,23 +114,21 @@
         android:text="NIK"
         android:textColor="@color/hitam"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/et_birth_date"
+        app:layout_constraintStart_toStartOf="@id/et_birth_date"
         app:layout_constraintTop_toBottomOf="@id/et_birth_date" />
 
     <EditText
         android:id="@+id/et_nik"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:fontFamily="@font/montserrat_medium"
         android:hint="ini place holder"
         android:inputType="textPersonName"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_nik"
+        app:layout_constraintStart_toStartOf="@id/tv_nik"
         app:layout_constraintTop_toBottomOf="@+id/tv_nik" />
 
     <TextView
@@ -147,23 +142,21 @@
         android:text="Email"
         android:textColor="@color/hitam"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/et_nik"
+        app:layout_constraintStart_toStartOf="@id/et_nik"
         app:layout_constraintTop_toBottomOf="@id/et_nik" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:fontFamily="@font/montserrat_medium"
         android:hint="email@address.com"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_email"
+        app:layout_constraintStart_toStartOf="@id/tv_email"
         app:layout_constraintTop_toBottomOf="@+id/tv_email" />
 
     <TextView
@@ -177,32 +170,28 @@
         android:text="Password"
         android:textColor="@color/hitam"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/et_email"
+        app:layout_constraintStart_toStartOf="@id/et_email"
         app:layout_constraintTop_toBottomOf="@id/et_email" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/colorPrimary"
         android:fontFamily="@font/montserrat_medium"
         android:hint="Must have at least 8 character"
         android:inputType="textPassword"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/tv_pass"
+        app:layout_constraintStart_toStartOf="@id/tv_pass"
         app:layout_constraintTop_toBottomOf="@+id/tv_pass" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="52dp"
         android:fontFamily="@font/montserrat_bold"
         android:paddingHorizontal="24dp"
         android:text="Daftar"
@@ -210,6 +199,7 @@
         android:textColor="@color/putih"
         android:textSize="14sp"
         app:cornerRadius="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_password" />
 
