fix layout home & queue

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="Login"
         android:textAlignment="center"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Email"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/tv_login_title"
         app:layout_constraintStart_toStartOf="@id/tv_login_title"
@@ -62,7 +62,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Password"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/et_email"
         app:layout_constraintStart_toStartOf="@id/et_email"
@@ -100,7 +100,7 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="Masuk"
         android:textAllCaps="false"
-        android:textColor="@color/putih"
+        android:textColor="@color/colorWhite"
         android:textSize="14sp"
         app:cornerRadius="48dp"
         app:layout_constraintEnd_toEndOf="parent"
