--- a/app/src/main/res/drawable/button_shape_highlight.xml
+++ b/app/src/main/res/drawable/button_shape_highlight.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/highlight"/>
+    <solid android:color="@color/colorHighlight"/>
     <corners android:radius="25dp"/>
 
 </shape>
