--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/putih"
+        android:backgroundTint="@color/colorWhite"
         android:src="@drawable/ic_baseline_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Daftar"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_light"
         android:text="Silahkan isi form dibawah ini"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Nama"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/tv_subtitle"
         app:layout_constraintStart_toStartOf="@id/tv_subtitle"
@@ -83,7 +83,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Tanggal Lahir"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/et_name"
         app:layout_constraintStart_toStartOf="@id/et_name"
@@ -112,7 +112,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="NIK"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/et_birth_date"
         app:layout_constraintStart_toStartOf="@id/et_birth_date"
@@ -140,7 +140,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Email"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/et_nik"
         app:layout_constraintStart_toStartOf="@id/et_nik"
@@ -168,7 +168,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Password"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/et_email"
         app:layout_constraintStart_toStartOf="@id/et_email"
@@ -196,7 +196,7 @@
         android:paddingHorizontal="24dp"
         android:text="Daftar"
         android:textAllCaps="false"
-        android:textColor="@color/putih"
+        android:textColor="@color/colorWhite"
         android:textSize="14sp"
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -220,7 +220,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
         android:text="Masuk"
-        android:textColor="@color/hitam"
+        android:textColor="@color/colorBlack"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@id/tv_already_have_account"
         app:layout_constraintTop_toBottomOf="@id/tv_already_have_account" />
