change password feature completed

--- a/app/src/main/res/layout/forgot_password_bottom_sheet.xml
+++ b/app/src/main/res/layout/forgot_password_bottom_sheet.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet_background"
     android:orientation="vertical"
-    android:padding="16dp"
-    app:layout_behavior="@string/bottom_sheet_behavior">
+    android:padding="16dp">
 
     <View
         android:layout_width="48dp"
