forgot password feature completed

--- a/app/src/main/res/layout/forgot_password_bottom_sheet.xml
+++ b/app/src/main/res/layout/forgot_password_bottom_sheet.xml
@@ -37,14 +37,15 @@
         app:boxBackgroundColor="@color/colorWhite">
 
         <EditText
-            android:id="@+id/et_email_password_recovery"
+            android:id="@+id/et_email_forgot_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email address" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnResetPassword"
+        android:id="@+id/btnForgotPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
